# doppleganger

./: Cargo.toml  flake.nix
doppleganger/: Cargo.toml
doppleganger-core/: Cargo.toml
doppleganger-core/src/: lib.rs
doppleganger-macros/: Cargo.toml
doppleganger-macros-parse/: Cargo.toml
doppleganger-macros-parse/src/: lib.rs  tests.rs
doppleganger-macros/src/: lib.rs
doppleganger/src/: lib.rs
examples/: Cargo.toml  basic_usage.rs  rename_usage.rs
