[package]
name = "doppleganger-core"
version = "0.2.0"
edition = "2024"
description = "Core trait and implementations for doppleganger type transformations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanaye/doppleganger"

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]

[dependencies]
chrono = { version = "0.4.42", optional = true }
uuid = { version = "1.18.1", optional = true }
