[package]
name = "doppleganger"
version = "0.4.0"
edition = "2024"
description = "Type transformation library with proc-macro support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanaye/doppleganger"

[features]
chrono = ["doppleganger-core/chrono"]
uuid = ["doppleganger-core/uuid"]

[dependencies]
doppleganger-core = { version = "0.4.0", path = "../doppleganger-core" }
doppleganger-macros = { version = "0.4.0", path = "../doppleganger-macros" }
